[gd_scene load_steps=40 format=2]

[ext_resource path="res://Sprites/FireBall/Fire2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/FireBall/Fire1.png" type="Texture" id=2]
[ext_resource path="res://FireBall.gd" type="Script" id=3]
[ext_resource path="res://Sprites/FireBall/Fire17.png" type="Texture" id=4]
[ext_resource path="res://Sprites/FireBall/Fire18.png" type="Texture" id=5]
[ext_resource path="res://Sprites/FireBall/Fire5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/FireBall/Fire11.png" type="Texture" id=7]
[ext_resource path="res://Sprites/FireBall/Fire19.png" type="Texture" id=8]
[ext_resource path="res://Sprites/FireBall/Fire3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/FireBall/Fire6.png" type="Texture" id=10]
[ext_resource path="res://Sprites/FireBall/Fire8.png" type="Texture" id=11]
[ext_resource path="res://Sprites/FireBall/Fire4.png" type="Texture" id=12]
[ext_resource path="res://Sprites/FireBall/Fire7.png" type="Texture" id=13]
[ext_resource path="res://Sprites/FireBall/Fire9.png" type="Texture" id=14]
[ext_resource path="res://Sprites/FireBall/Fire10.png" type="Texture" id=15]
[ext_resource path="res://Sprites/FireBall/Fire13.png" type="Texture" id=17]
[ext_resource path="res://Sprites/FireBall/Fire14.png" type="Texture" id=18]
[ext_resource path="res://Sprites/FireBall/Fire15.png" type="Texture" id=19]
[ext_resource path="res://Sprites/FireBall/Fire16.png" type="Texture" id=20]
[ext_resource path="res://Sprites/FireBall/Fire21.png" type="Texture" id=21]
[ext_resource path="res://Sprites/FireBall/Fire20.png" type="Texture" id=22]
[ext_resource path="res://Sprites/FireBall/Fire22.png" type="Texture" id=23]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse4.png" type="Texture" id=24]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse9.png" type="Texture" id=25]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse1.png" type="Texture" id=26]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse11.png" type="Texture" id=27]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse5.png" type="Texture" id=28]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse12.png" type="Texture" id=29]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse8.png" type="Texture" id=30]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse3.png" type="Texture" id=31]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse14.png" type="Texture" id=32]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse10.png" type="Texture" id=33]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse13.png" type="Texture" id=34]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse2.png" type="Texture" id=35]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse6.png" type="Texture" id=36]
[ext_resource path="res://Sprites/FireBall/launch/LaunchRedPulse7.png" type="Texture" id=37]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/Fire12.png-4fff98d64ed3ce0b4596d56c8de53fbb.stex"

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 7 ), SubResource( 1 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 23 ) ],
"loop": false,
"name": "Hit",
"speed": 20.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 35 ), ExtResource( 31 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 30 ), ExtResource( 25 ), ExtResource( 33 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 34 ), ExtResource( 32 ) ],
"loop": false,
"name": "Launch",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 60, 60 )

[node name="FireBall" type="Area2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.075, 0.075 )
frames = SubResource( 2 )
animation = "Shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 0.075, 0.075 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -9.15525e-06, -4.57764e-06 )
scale = Vector2( 0.5, 0.5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="body_entered" from="." to="." method="_on_FireBall_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
